tests/snapshots/e2e__e2e_complex_nested_json__js__n100.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "users": [ /* 2 more items */ ],
  "meta": { /* 4 more properties */ }
}
