tests/snapshots/e2e__e2e_complex_nested_json__js__n10000.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "meta": {
    "pageSize": 20,
    "next": null,
    "page": 1,
    "tags": [
      "alpha",
      "beta",
      "gamma",
      "delta",
      "epsilon"
    ]
  },
  "users": [
    {
      "roles": [
        "admin",
        "editor",
        "viewer"
      ],
      "name": "Alice Wonderland",
      "id": 1,
      "profile": {
        "bio": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
        "social": {
          "twitter": "@alice",
          "web": "https://example.com/users/alice",
          "github": "alice"
        }
      }
    },
    {
      "id": 2,
      "roles": [
        "contributor",
        "viewer"
      ],
      "name": "Bob Builder",
      "profile": {
        "bio": "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
        "social": {
          "twitter": "@buildWithBob",
          "github": "bobbuilder",
          "web": "https://bob.example.org"
        }
      }
    }
  ]
}
