tests/snapshots/e2e__e2e_complex_nested_json__js__n250.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "users": [
    {
      "id": 1,
      "name": "…"
      /* 2 more properties */
    },
    { /* 4 more properties */ }
  ],
  "meta": {
    "page": 1,
    "pageSize": 20,
    "next": null,
    "tags": [ /* 5 more items */ ]
  }
}
